--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
         <p id="amountText"></p>
         <div class="instructions">
             <p>• <strong>*167#</strong> ডায়াল করে বা নগদ এপস্য থেকে সেন্ডমানি করতে হবে।</p>
-            <p>• শুধু মাত্র বিকাশ এবং নগদ এ টাকা পাঠাতে পারবেন। টাকা পাঠিয়ে উপরের বক্সে ট্রানজেকশন আইডি দিয়ে Verify এ ক্লিক করুন</p>
+            <p>• টাকা পাঠিয়ে উপরের বক্সে ট্রানজেকশন আইডি দিয়ে Verify এ ক্লিক করুন।</p>
+            <p>• শুধু মাত্র বিকাশ এবং নগদ এ টাকা পাঠাতে পারবেন।</p>
             <p>• Nagad/Bkash: <strong>01581050857</strong>
                 <button class="copy-btn" onclick="copyNumber()">Copy</button>
             </p>
