--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             const transactionId = document.getElementById('transactionId').value;
             if (transactionId) {
                 // Payment verification logic can be added here
-                alert("পেমেন্ট সফলভাবে যাচাই করা হয়েছে!");
+                alert("দুঃখিত,আপনার দেওয়া ট্রানজেকশন আইডি সঠিক নয় !");
                 document.getElementById('paymentForm').classList.remove('active');
                 const products = document.querySelectorAll('.product-list .product');
                 products.forEach(product => {
