--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ function verifyPayment() {
     const transactionId = document.getElementById('transactionId').value;
     if (transactionId) {
         if (transactionId === 'BJL5M3KFCN') {
-            alert(`${carromUserId} Congratulations 🎉`); // Carrom User ID সহ মেসেজ প্রদর্শন
+            alert(`প্রিয়,${carromUserId} আপনি প্রডাক্ট টি পেয়েছেন আপনার আইডি চেক করুন`); // Carrom User ID সহ মেসেজ প্রদর্শন
         } else {
             alert("দুঃখিত, আপনার দেওয়া ট্রানজেকশন আইডি সঠিক নয় !");
         }
