--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
         <div class="product">
             <img src="https://i.ibb.co.com/7N2DsMt/Picsart-24-10-21-14-17-32-087.jpg" alt="Product 3">
             <h3>৭ কোটি কয়েন🪙</h3>
-           <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ৪০০</div> <p>Price: 117 BDT</p>
-            <button class="button buy-now" onclick="showUserIdForm(117)">Buy Now</button>
+           <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ৭৫০</div> <p>Price: 150 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(150)">Buy Now</button>
         </div>
     </div>
 
@@ -242,11 +242,10 @@
                 <button class="copy-btn" onclick="copyNumber()">Copy</button>
             </p>
         </div>
-        <button class="button verify" onclick="verifyPayment()">VERIFY</button>
-        <button class="button back" onclick="goBack('paymentForm')">Back</button> <!-- Back button added -->
-
+        <button class="button verify" onclick="verifyPayment()">Verify</button>
+        <button class="button back" onclick="goBack('paymentForm')">Back</button>
         <div class="loading" id="loading">
-            <img src="https://i.ibb.co/bX3CvGg/rotate.gif" alt="Loading">
+            <img src="https://i.ibb.co/YfFr9Yt/loading.gif" alt="Loading...">
         </div>
     </div>
 
@@ -259,8 +258,16 @@
         </a>
         <a href="https://wa.me/+8801581050857" target="_blank">
             <button>
-                <img src="https://i.ibb.co/MNDskzJ/2936956.png" alt="Icon 2">
+                <img src="https://i.ibb.co/MNDskzJ/2936956.png" alt="Icon 3">
                 Live Chat
+            </button>
+        </a>
+    </div>
+    <div class="footer">
+        <a href="https://carrompooltopup.github.io/website/" target="_blank">
+            <button>
+                <img src="https://i.ibb.co.com/vkp3nbt/notification.gif" alt="Icon 2">
+                 
             </button>
         </a>
     </div>
@@ -348,4 +355,4 @@ function verifyPayment() {
     </script>
 
 </body>
-</html>
+    </html>
