--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
         <div class="product">
             <img src="https://i.ibb.co.com/7N2DsMt/Picsart-24-10-21-14-17-32-087.jpg" alt="Product 3">
             <h3>৭ কোটি কয়েন🪙</h3>
-           <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ৭৫০</div> <p>Price: 150 BDT</p>
-            <button class="button buy-now" onclick="showUserIdForm(150)">Buy Now</button>
+           <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ৮৫০</div> <p> -85% Price: 127 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(127)">Buy Now</button>
         </div>
     </div>
 
