--- a/index.html
+++ b/index.html
@@ -189,6 +189,13 @@
             <button class="button buy-now" onclick="showUserIdForm(95)">Buy Now</button>
         </div>
         <div class="product">
+            <img src="https://i.ibb.co/d092sxC/Picsart-24-10-20-12-32-24-979.png" alt="Product 1">
+            <h3>এই ৮ টি জিনিস পাবেন✅</h3>
+            <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ১৫০</div>
+            <p>Price: 50 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(95)">Buy Now</button>
+        </div>
+        <div class="product">
             <img src="https://i.ibb.co/4m78c6F/Picsart-24-10-20-12-30-00-471.png" alt="Product 2">
             <h3>Carrom pass🩵</h3>
             <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ২৫০</div>
