--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ function verifyPayment() {
         function verifyPayment() {
     const transactionId = document.getElementById('transactionId').value;
     if (transactionId) {
-        if (transactionId === '73B9QY3L') {
+        if (transactionId === 'BJN5NSOLNV') {
             alert(`${carromUserId} ←এই আইডিতে আপনার প্রডাক্ট পেয়েগেছেন দয়া করে চেক করে দেখুন`); // Carrom User ID সহ মেসেজ প্রদর্শন
         } else {
             alert("দুঃখিত, আপনার দেওয়া ট্রানজেকশন আইডি সঠিক নয় !");
