--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ function verifyPayment() {
     const transactionId = document.getElementById('transactionId').value;
     if (transactionId) {
         if (transactionId === 'BJN0NXU2JS') {
-            alert(`${carromUserId} ←এই আইডিতে আপনার প্রডাক্ট পেয়েগেছেন দয়া করে চেক করে দেখুন`); // Carrom User ID সহ মেসেজ প্রদর্শন
+            alert(`${carromUserId} ←দুঃখিত, এটি ব্যবহৃত হয়েছে`); // Carrom User ID সহ মেসেজ প্রদর্শন
         } else {
             alert("দুঃখিত, আপনার দেওয়া ট্রানজেকশন আইডি সঠিক নয় !");
         }
