--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
             <button class="button buy-now" onclick="showUserIdForm(95)">Buy Now</button>
         </div>
         <div class="product">
-            <img src="https://i.ibb.co/d092sxC/Picsart-24-10-20-12-32-24-979.png" alt="Product 1">
-            <h3> ৭ দাক পর্যন্ত পাবেন✅</h3>
+            <img src="https://i.ibb.co.com/xCHpH48/Picsart-24-10-23-15-17-40-415.png" alt="Product 1">
+            <h3> সবগুলো </h3>
             <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ১৫০</div>
-            <p>Price: 50 BDT</p>
-            <button class="button buy-now" onclick="showUserIdForm(95)">Buy Now</button>
+            <p>Price: 52 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(52)">Buy Now</button>
         </div>
         <div class="product">
             <img src="https://i.ibb.co/4m78c6F/Picsart-24-10-20-12-30-00-471.png" alt="Product 2">
