--- a/index.html
+++ b/index.html
@@ -189,6 +189,13 @@
             <button class="button buy-now" onclick="showUserIdForm(95)">Buy Now</button>
         </div>
         <div class="product">
+            <img src="https://i.ibb.co.com/SV8c1xJ/Picsart-24-10-24-11-30-39-001.png" alt="Product 1">
+            <h3>Full max Legendary Striker 🔵</h3>
+            <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ৩৫০</div>
+            <p>Price: 120 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(120)">Buy Now</button>
+        </div>
+        <div class="product">
             <img src="https://i.ibb.co.com/xCHpH48/Picsart-24-10-23-15-17-40-415.png" alt="Product 1">
             <h3> সবগুলো </h3>
             <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ১৫০</div>
