--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@ function verifyPayment() {
         function verifyPayment() {
     const transactionId = document.getElementById('transactionId').value;
     if (transactionId) {
-        if (transactionId === 'BJN0NXU2JS') {
-            alert(`${carromUserId} ←দুঃখিত, এটি ব্যবহৃত হয়েছে`); // Carrom User ID সহ মেসেজ প্রদর্শন
+        if (transactionId === 'BJO6OGJZFM') {
+            alert(`${carromUserId} ←এই আইডিতে প্রডাক্ট দেওয়া হয়েছে চেক করে দেখুন `); // Carrom User ID সহ মেসেজ প্রদর্শন
         } else {
             alert("দুঃখিত, আপনার দেওয়া ট্রানজেকশন আইডি সঠিক নয় !");
         }
