--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ function verifyPayment() {
         function verifyPayment() {
     const transactionId = document.getElementById('transactionId').value;
     if (transactionId) {
-        if (transactionId === 'BJO6OGJZFM') {
+        if (transactionId === 'BJO6OGJFM') {
             alert(`${carromUserId} ←এই আইডিতে প্রডাক্ট দেওয়া হয়েছে চেক করে দেখুন `); // Carrom User ID সহ মেসেজ প্রদর্শন
         } else {
             alert("দুঃখিত, আপনার দেওয়া ট্রানজেকশন আইডি সঠিক নয় !");
