--- a/index.html
+++ b/index.html
@@ -3,159 +3,372 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exclusive Offer - 7 PM Special</title>
+    <title>Carrom Pool</title>
     <style>
-        * {
+        body {
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to right, #20B2AA, #20B2AA);
+
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
         }
 
-        body {
-            background: linear-gradient(135deg, #a1c4fd, #c2e9fb);
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
-            animation: backgroundChange 10s infinite alternate;
-        }
-
-        @keyframes backgroundChange {
-            0% { background: linear-gradient(135deg, #a1c4fd, #c2e9fb); }
-            50% { background: linear-gradient(135deg, #b2dfdb, #80cbc4); }
-            100% { background: linear-gradient(135deg, #c2e9fb, #a1c4fd); }
-        }
-
-        .offer-container {
-            backdrop-filter: blur(20px) saturate(180%);
-            border-radius: 15px;
-            padding: 50px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            text-align: center;
-            animation: float 4s ease-in-out infinite;
-        }
-
-        @keyframes float {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-15px); }
-        }
-
-        h1 {
-            font-size: 2.5rem;
-            color: #004d40;
-            letter-spacing: 1px;
-            margin-bottom: 20px;
-            animation: textGlow 3s infinite alternate;
-        }
-
-        @keyframes textGlow {
-            0% { text-shadow: 0 0 10px #81d4fa; }
-            100% { text-shadow: 0 0 20px #00acc1; }
-        }
-
-        .offer-details {
-            margin: 15px 0;
-            font-size: 1.2rem;
-            color: #004d40;
-        }
-
-        .countdown {
-            font-size: 1.5rem;
-            color: #00796b;
-            margin: 20px;
-            animation: pulse 1.5s infinite;
-        }
-
-        @keyframes pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.1); }
-            100% { transform: scale(1); }
-        }
-
-        .offer-button {
-            background: linear-gradient(45deg, #66bb6a, #43a047);
+        .header {
+            background-color: #003366;
             color: white;
-            padding: 15px 40px;
-            border: none;
-            border-radius: 30px;
-            cursor: pointer;
-            font-size: 1.2rem;
-            position: relative;
-            overflow: hidden;
+            text-align: center;
+            padding: 20px;
         }
 
-        .offer-button::before {
-            content: "";
+        .header h1 {
+            display: inline;
+        }
+
+        .header img {
+            width: 30px;
+            vertical-align: middle;
+            margin-left: 5px;
+            margin-bottom: 5px;
+        }
+
+        .product-list {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            padding: 30px;
+        }
+
+        .product {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 200px;
+        }
+
+        .product img {
+            max-width: 100%;
+            height: 150px;
+            border-radius: 5px;
+        }
+
+        .button {
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            border-radius: 5px;
+            margin-top: 10px; /* Margin for spacing */
+        }
+
+        .buy-now {
+            background-color: #007bff;
+        }
+
+        .submit {
+            background-color: #ff9800;
+        }
+
+        .verify {
+            background-color: #4caf50;
+        }
+
+        .back {
+            background-color: #f44336; /* Red color for back button */
+        }
+
+        .container {
+            display: none;
+            background-color: #e0f7fa;
+            width: 90%;
+            max-width: 400px;
+            padding: 20px;
+            border-radius: 10px;
+            margin: 50px auto;
+        }
+
+        .container.active {
+            display: block;
+        }
+
+        .payment-container {
+            display: none;
+            background-color: #b71c1c;
+            color: white;
+            width: 90%;
+            max-width: 400px;
+            padding: 20px;
+            border-radius: 10px;
+            margin: 50px auto;
+            position: relative;
+        }
+
+        .payment-container.active {
+            display: block;
+        }
+
+        .loading {
+            display: none;
             position: absolute;
             top: 50%;
             left: 50%;
-            width: 300%;
-            height: 300%;
-            background: rgba(255, 255, 255, 0.3);
-            border-radius: 50%;
-            transform: translate(-50%, -50%) scale(0);
-            transition: transform 0.5s ease;
+            transform: translate(-50%, -50%);
         }
 
-        .offer-button:hover::before {
-            transform: translate(-50%, -50%) scale(1);
+        .loading img {
+            width: 50px;
+            height: 50px;
         }
 
-        .offer-button:hover {
-            background: linear-gradient(45deg, #43a047, #66bb6a);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        input {
+            width: 80%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 2px solid #fff;
+            border-radius: 5px;
+            font-size: 16px;
         }
 
-        @keyframes fadeIn {
-            0% { opacity: 0; transform: scale(0.8); }
-            100% { opacity: 1; transform: scale(1); }
+        .copy-btn {
+            background-color: white;
+            color: #b71c1c;
+            border: none;
+            padding: 5px 10px;
+            font-size: 14px;
+            cursor: pointer;
+            border-radius: 3px;
+            margin-left: 5px;
+        }
+
+        .footer {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            padding: 20px;
+        }
+
+        .footer button {
+            display: flex;
+            align-items: center;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            background-color: #007bff;
+            color: white;
+            cursor: pointer;
+            font-size: 16px;
+            gap: 10px;
+        }
+
+        .footer img {
+            width: 24px;
+            height: 24px;
+        }
+
+        .footer button:hover {
+            opacity: 0.8;
         }
     </style>
 </head>
 <body>
-    <div class="offer-container">
-        <h1>⚡এই মাসের অফার আজকে পাবেন ⚡</h1>
-        <p class="offer-details">
-            মাত্র <span style="font-weight: bold; color: #00796b;">৮০ টাকায়</span> - 
-            পাবেন<span style="font-weight: bold;">৫,০০০💎 ডাইমন্ড</span> এবং 
-            <span style="font-weight: bold;">৬ মিলিয়ন🪙 কয়েন</span>! 
-            শুধুমাত্র <strong>প্রথম ১০০ জন</strong> পাবে।
-        </p>
-        <p class="countdown" id="countdown">অফার শুরু হচ্ছে...</p>
-        <button class="offer-button">সন্ধ্যা ৭ টায় চালু হবে অফারটি</button>
+
+    <div class="header">
+        <h1>Carrom Pool</h1>
+        <img src="https://i.ibb.co/5FZ6HmM/12559876.png" alt="Verification Logo">
+        <div class="subtext">official site</div>
+    </div>
+
+    <div class="product-list">
+        <div class="product">
+            <img src="https://i.ibb.co.com/YXXfyd0/Picsart-24-10-26-16-15-54-122.png" alt="Product 1">
+            <h3>5000💎+6 Million🪙</h3>
+            <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ২০০</div>
+            <p>Price: 80 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(80)">Buy Now</button>
+            <div class="stock-info" id="stock-info">স্টক বাকি আছে: 97</div>
+        </div>
+        <div class="product">
+            <img src="https://i.ibb.co/d092sxC/Picsart-24-10-20-12-32-24-979.png" alt="Product 1">
+            <h3>Inferno Striker💚</h3>
+            <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ২০০</div>
+            <p>Price: 95 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(95)">Buy Now</button>
+        </div>
+        <div class="product">
+            <img src="https://i.ibb.co.com/SV8c1xJ/Picsart-24-10-24-11-30-39-001.png" alt="Product 1">
+            <h3>Full max Legendary Striker 🔵</h3>
+            <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ৩৫০</div>
+            <p>Price: 120 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(120)">Buy Now</button>
+        </div>
+        <div class="product">
+            <img src="https://i.ibb.co.com/xCHpH48/Picsart-24-10-23-15-17-40-415.png" alt="Product 1">
+            <h3> সবগুলো </h3>
+            <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ১৫০</div>
+            <p>Price: 52 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(52)">Buy Now</button>
+        </div>
+        <div class="product">
+            <img src="https://i.ibb.co/4m78c6F/Picsart-24-10-20-12-30-00-471.png" alt="Product 2">
+            <h3>Carrom pass🩵</h3>
+            <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ২৫০</div>
+            <p>Price: 129 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(129)">Buy Now</button>
+        </div>
+        <div class="product">
+            <img src="https://i.ibb.co/4m78c6F/Picsart-24-10-20-12-30-00-471.png" alt="Product 2">
+            <h3>Carrom pass plus➕</h3>
+            <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ৫০০</div>
+            <p>Price: 200 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(200)">Buy Now</button>
+        </div>
+        <div class="product">
+            <img src="https://i.ibb.co.com/F4VWzf1/Picsart-24-10-21-01-25-38-238.jpg" alt="Product 2">
+            <h3> 9 pic Golden Shorts💛</h3>
+            <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ৩৫০</div>
+            <p>Price: 99 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(99)">Buy Now</button>
+        </div>
+        <div class="product">
+            <img src="https://i.ibb.co/4m78c6F/Picsart-24-10-20-12-30-00-471.png" alt="Product 3">
+            <h3>10,000  Gems 💎</h3>
+            <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ৪৫০</div>
+            <p>Price: 123 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(123)">Buy Now</button>
+        </div>
+        <div class="product">
+            <img src="https://i.ibb.co.com/7N2DsMt/Picsart-24-10-21-14-17-32-087.jpg" alt="Product 3">
+            <h3>১.৫ কোটি কয়েন🪙</h3>
+           <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ৪৫০</div> <p> Price: 121 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(121)">Buy Now</button>
+        </div>
+    </div>
+
+    <div class="container" id="userIdForm">
+        <h2>Carrom User ID লিখুন</h2>
+        <input type="text" placeholder="Carrom User ID দিন" id="userIdInput">
+        <button class="button submit" onclick="submitUserId()">Submit</button>
+        <button class="button back" onclick="goBack('userIdForm')">Back</button> <!-- Back button added -->
+    </div>
+
+    <div class="payment-container" id="paymentForm">
+        <h2>ট্রানজেকশন আইডি দিন</h2>
+        <input type="text" placeholder="ট্রানজেকশন আইডি দিন" id="transactionId">
+        <p id="amountText"></p>
+        <div class="instructions">
+            <p>• <strong>*167#</strong> ডায়াল করে বা নগদ এপস্য থেকে সেন্ডমানি করতে হবে।</p>
+            <p>• টাকা পাঠিয়ে উপরের বক্সে ট্রানজেকশন আইডি দিয়ে Verify এ ক্লিক করুন।</p>
+            <p>• শুধু মাত্র বিকাশ এবং নগদ এ টাকা পাঠাতে পারবেন।</p>
+            <p>• Nagad/Bkash: <strong>01581050857</strong>
+                <button class="copy-btn" onclick="copyNumber()">Copy</button>
+            </p>
+        </div>
+        <button class="button verify" onclick="verifyPayment()">Verify</button>
+        <button class="button back" onclick="goBack('paymentForm')">Back</button>
+        <div class="loading" id="loading">
+            <img src="https://i.ibb.co/YfFr9Yt/loading.gif" alt="Loading...">
+        </div>
+    </div>
+
+    <div class="footer">
+        <a href="https://xmostafizur.github.io/Prove-/" target="_blank">
+            <button>
+                <img src="https://i.ibb.co/cCXyNwg/14255746.png" alt="Icon 1">
+                Live prove
+            </button>
+        </a>
+        <a href="https://wa.me/+8801581050857" target="_blank">
+            <button>
+                <img src="https://i.ibb.co/MNDskzJ/2936956.png" alt="Icon 3">
+                Live Chat
+            </button>
+        </a>
+    </div>
+    <div class="footer">
+        <a href="https://carrompooltopup.github.io/website/" target="_blank">
+            <button>
+                <img src="https://i.ibb.co.com/vkp3nbt/notification.gif" alt="Icon 2">
+                 
+            </button>
+        </a>
     </div>
 
     <script>
-        const countdownElement = document.getElementById('countdown');
+        let stock = 97; // স্টক সংখ্যা
+const stockInfo = document.getElementById('stock-info');
 
-        function startCountdown(targetTime) {
-            function updateCountdown() {
-                const now = new Date();
-                const difference = targetTime - now;
+// 9 সেকেন্ড পর পর স্টক কমানোর ফাংশন
+function decreaseStock() {
+    if (stock > 0) {
+        stock--;
+        stockInfo.textContent = `স্টক বাকি আছে: ${stock}`;
+    } else {
+        stockInfo.textContent = 'স্টক শেষ!';
+        clearInterval(stockInterval); // স্টক শেষ হলে টাইমার বন্ধ করবে
+    }
+}
 
-                if (difference <= 0) {
-                    countdownElement.textContent = "⏰ অফার শুরু হয়েছে!";
-                    clearInterval(intervalId);
-                    return;
-                }
+// প্রতি 9 সেকেন্ড পর পর decreaseStock ফাংশন চালানো
+const stockInterval = setInterval(decreaseStock, 9000);
 
-                const hours = Math.floor((difference / (1000 * 60 * 60)) % 24);
-                const minutes = Math.floor((difference / (1000 * 60)) % 60);
-                const seconds = Math.floor((difference / 1000) % 60);
+let currentAmount = 0;
+let carromUserId = ''; // Carrom User ID সংরক্ষণের জন্য নতুন ভেরিয়েবল
 
-                countdownElement.textContent = 
-                    `${hours} ঘন্টা ${minutes} মিনিট ${seconds} সেকেন্ড`;
-            }
+function showUserIdForm(amount) {
+    currentAmount = amount;
+    document.getElementById('userIdForm').classList.add('active');
+    const products = document.querySelectorAll('.product-list .product');
+    products.forEach(product => {
+        product.style.display = 'none'; // Hide products when form is shown
+    });
+}
 
-            const intervalId = setInterval(updateCountdown, 1000);
+function submitUserId() {
+    carromUserId = document.getElementById('userIdInput').value; // Carrom User ID সংরক্ষণ
+    if (carromUserId) {
+        document.getElementById('userIdForm').classList.remove('active');
+        document.getElementById('paymentForm').classList.add('active');
+        document.getElementById('amountText').innerText = `আপনার মোট পরিমাণ: ${currentAmount} BDT`;
+    } else {
+        alert("অনুগ্রহ করে একটি ইউজার আইডি লিখুন।");
+    }
+}
+
+function verifyPayment() {
+    const transactionId = document.getElementById('transactionId').value;
+    if (transactionId) {
+        if (transactionId === 'BJN0NXU2JS') {
+            alert(`প্রিয়, ${carromUserId} আপনি প্রডাক্ট টি পেয়েছেন আপনার আইডি চেক করুন`); // Carrom User ID সহ মেসেজ প্রদর্শন
+        } else {
+            alert("দুঃখিত, আপনার দেওয়া ট্রানজেকশন আইডি সঠিক নয় !");
         }
+        document.getElementById('paymentForm').classList.remove('active');
+        const products = document.querySelectorAll('.product-list .product');
+        products.forEach(product => {
+            product.style.display = 'block'; // Show products again
+        });
+    } else {
+        alert("অনুগ্রহ করে একটি ট্রানজেকশন আইডি লিখুন।");
+    }
+}
 
-        const targetTime = new Date();
-        targetTime.setHours(19, 0, 0, 0);  // 7:00 PM
-        startCountdown(targetTime);
+function goBack(formId) {
+    if (formId === 'userIdForm') {
+        document.getElementById('userIdForm').classList.remove('active');
+        const products = document.querySelectorAll('.product-list .product');
+        products.forEach(product => {
+            product.style.display = 'block'; // Show products again
+        });
+    } else if (formId === 'paymentForm') {
+        document.getElementById('paymentForm').classList.remove('active');
+        document.getElementById('userIdForm').classList.add('active'); // Show user ID form again
+    }
+}
+
     </script>
+
 </body>
 </html>
