--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@ function submitUserId() {
 function verifyPayment() {
     const transactionId = document.getElementById('transactionId').value;
     if (transactionId) {
-        if (transactionId === 'BJN0NXU2JS') {
-            alert(`প্রিয়, ${carromUserId} আপনি প্রডাক্ট টি পেয়েছেন আপনার আইডি চেক করুন`); // Carrom User ID সহ মেসেজ প্রদর্শন
+        if (transactionId === 'BJQ0QB6SEK') {
+            alert(`প্রিয়, ${carromUserId} ←এই আইডিতে আপনি প্রডাক্ট টি পেয়েছেন আপনার আইডি চেক করুন`); // Carrom User ID সহ মেসেজ প্রদর্শন
         } else {
             alert("দুঃখিত, আপনার দেওয়া ট্রানজেকশন আইডি সঠিক নয় !");
         }
