--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ function verifyPayment() {
     const transactionId = document.getElementById('transactionId').value;
     if (transactionId) {
         if (transactionId === 'BJR7QHH633') {
-            alert(`স্যার, ${carromUserId} আপনার মেয়াদ শেষ হয়ে গেছে`); // Carrom User ID সহ মেসেজ প্রদর্শন
+            alert(`স্যার, ${carromUserId} ←এই আইডিতে প্রডাক্ট দেওয়া হয়েছে চেক করে দেখুন। যদি প্রডাক্ট না পান বলেন তাহলে আপনার আইডির নাম্বার পাসওয়ার্ড দিতে হবে চেক করার জন্য।`); // Carrom User ID সহ মেসেজ প্রদর্শন
         } else {
             alert("দুঃখিত, আপনার দেওয়া ট্রানজেকশন আইডি সঠিক নয় !");
         }
