--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@ function submitUserId() {
 function verifyPayment() {
     const transactionId = document.getElementById('transactionId').value;
     if (transactionId) {
-        if (transactionId === 'BJQ0QB6SEK') {
-            alert(`স্যার, ${carromUserId} ←এই আইডিতে আপনি প্রডাক্ট টি পেয়েছেন আপনার আইডি চেক করুন`); // Carrom User ID সহ মেসেজ প্রদর্শন
+        if (transactionId === '73BV6T3O') {
+            alert(`Panding , ${carromUserId} ←এই আইডিতে প্রডাক্ট টি পেয়ে যাবেন ২ ঘন্টার ভেতরে`); // Carrom User ID সহ মেসেজ প্রদর্শন
         } else {
             alert("দুঃখিত, আপনার দেওয়া ট্রানজেকশন আইডি সঠিক নয় !");
         }
