--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
     </div>
 
     <div class="container" id="userIdForm">
-        <h2>আপনার ব্রিলিয়ান্ট নাম্বার দিন</h2>
-        <input type="text" placeholder="ব্রিলিয়ান্ট নাম্বার দিন" id="userIdInput">
+        <h2>আপনার ব্রিলিয়ান্ট দিন</h2>
+        <input type="text" placeholder="ব্রিলিয়ান্ট নাম্বার লিখুন" id="userIdInput">
         <button class="button submit" onclick="submitUserId()">Submit</button>
         <button class="button back" onclick="goBack('userIdForm')">Back</button> <!-- Back button added -->
     </div>
@@ -275,7 +275,7 @@
         <a href="https://xmostafizur.github.io/Prove-/" target="_blank">
             <button>
                 <img src="https://i.ibb.co/cCXyNwg/14255746.png" alt="Icon 1">
-                Live prove
+                About 
             </button>
         </a>
         <a href="https://wa.me/+8801581050857" target="_blank">
