--- a/index.html
+++ b/index.html
@@ -189,64 +189,57 @@
     <div class="product-list">
         <div class="product">
             <img src="https://i.ibb.co.com/5FTqPDV/Picsart-24-10-30-19-30-31-559.png" alt="Product 1">
-            <h3>Inferno Striker💚</h3>
-            <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ২০০</div>
-            <p>Price: 95 BDT</p>
-            <button class="button buy-now" onclick="showUserIdForm(95)">Buy Now</button>
+            <h3>১১০ টাকা পাবেন</h3>
+            <p>Price: 100 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(100)">Buy Now</button>
         </div>
         <div class="product">
             <img src="https://i.ibb.co.com/5FTqPDV/Picsart-24-10-30-19-30-31-559.png" alt="Product 1">
-            <h3>Full max Legendary Striker 🔵</h3>
+            <h3>২২০ টাকা পাবেন </h3>
             <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ৩৫০</div>
-            <p>Price: 120 BDT</p>
-            <button class="button buy-now" onclick="showUserIdForm(120)">Buy Now</button>
-        </div>
-        <div class="product">
-            <img src="https://i.ibb.co.com/5FTqPDV/Picsart-24-10-30-19-30-31-559.png" alt="Product 1">
-            <h3> সবগুলো </h3>
-            <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ১৫০</div>
-            <p>Price: 52 BDT</p>
-            <button class="button buy-now" onclick="showUserIdForm(52)">Buy Now</button>
-        </div>
-        <div class="product">
-            <img src="https://i.ibb.co.com/5FTqPDV/Picsart-24-10-30-19-30-31-559.png" alt="Product 2">
-            <h3>Carrom pass🩵</h3>
-            <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ২৫০</div>
-            <p>Price: 129 BDT</p>
-            <button class="button buy-now" onclick="showUserIdForm(129)">Buy Now</button>
-        </div>
-        <div class="product">
-            <img src="https://i.ibb.co.com/5FTqPDV/Picsart-24-10-30-19-30-31-559.png" alt="Product 2">
-            <h3>Carrom pass plus➕</h3>
-            <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ৫০০</div>
             <p>Price: 200 BDT</p>
             <button class="button buy-now" onclick="showUserIdForm(200)">Buy Now</button>
         </div>
         <div class="product">
+            <img src="https://i.ibb.co.com/5FTqPDV/Picsart-24-10-30-19-30-31-559.png" alt="Product 1">
+            <h3> ৩৩০ টাকা পাবেন</h3>
+            <p>Price: 300 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(300)">Buy Now</button>
+        </div>
+        <div class="product">
             <img src="https://i.ibb.co.com/5FTqPDV/Picsart-24-10-30-19-30-31-559.png" alt="Product 2">
-            <h3> 9 pic Golden Shorts💛</h3>
-            <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ৩৫০</div>
-            <p>Price: 99 BDT</p>
-            <button class="button buy-now" onclick="showUserIdForm(99)">Buy Now</button>
+            <h3>৪৪০ টাকা পাবেন</h3>
+            <p>Price: 400 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(400)">Buy Now</button>
+        </div>
+        <div class="product">
+            <img src="https://i.ibb.co.com/5FTqPDV/Picsart-24-10-30-19-30-31-559.png" alt="Product 2">
+            <h3>৫৫০ টাকা পাবেন</h3>
+            <p>Price: 500 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(500)">Buy Now</button>
+        </div>
+        <div class="product">
+            <img src="https://i.ibb.co.com/5FTqPDV/Picsart-24-10-30-19-30-31-559.png" alt="Product 2">
+            <h3> ৬৬০ টাকা পাবেন</h3>
+            <p>Price: 600 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(600)">Buy Now</button>
         </div>
         <div class="product">
             <img src="https://i.ibb.co.com/5FTqPDV/Picsart-24-10-30-19-30-31-559.png" alt="Product 3">
-            <h3>10,000  Gems 💎</h3>
-            <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ৪৫০</div>
-            <p>Price: 123 BDT</p>
-            <button class="button buy-now" onclick="showUserIdForm(123)">Buy Now</button>
+            <h3>৭৭০ টাকা পাবেন</h3>
+            <p>Price: 700 BDT</p>
+            <button class="button buy-now" onclick="showUserIdForm(700)">Buy Now</button>
         </div>
         <div class="product">
             <img src="https://i.ibb.co.com/5FTqPDV/Picsart-24-10-30-19-30-31-559.png" alt="Product 3">
-            <h3>১.৫ কোটি কয়েন🪙</h3>
-           <div style="font-family: Arial, sans-serif; text-decoration: line-through; font-size: 12px;">৳ ৪৫০</div> <p> Price: 121 BDT</p>
-            <button class="button buy-now" onclick="showUserIdForm(121)">Buy Now</button>
+            <h3>৮৮০ টাকা পাবেন</h3>
+            <button class="button buy-now" onclick="showUserIdForm(800)">Buy Now</button>
         </div>
     </div>
 
     <div class="container" id="userIdForm">
-        <h2>আপনার ব্রিলিয়ান্ট দিন</h2>
-        <input type="text" placeholder="ব্রিলিয়ান্ট নাম্বার লিখুন" id="userIdInput">
+        <h2> রেজিস্টার করা সিম নাম্বার দিন</h2>
+        <input type="text" placeholder="রেজিস্ট্রেশন করা সিম নাম্বার লিখুন" id="userIdInput">
         <button class="button submit" onclick="submitUserId()">Submit</button>
         <button class="button back" onclick="goBack('userIdForm')">Back</button> <!-- Back button added -->
     </div>
