--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@ function submitUserId() {
 function verifyPayment() {
     const transactionId = document.getElementById('transactionId').value;
     if (transactionId) {
-        if (transactionId === '73BV6T3O') {
-            alert(`Panding , ${carromUserId} ←এই আইডিতে প্রডাক্ট টি পেয়ে যাবেন ২ ঘন্টার ভেতরে`); // Carrom User ID সহ মেসেজ প্রদর্শন
+        if (transactionId === 'BK571V5735') {
+            alert(`Panding , ${carromUserId} ←২৪ ঘন্টার মধ্যে এই আইডিতে প্রডাক্ট টি পেয়ে যাবেন`); // Carrom User ID সহ মেসেজ প্রদর্শন
         } else {
             alert("দুঃখিত, আপনার দেওয়া ট্রানজেকশন আইডি সঠিক নয় !");
         }
